implement the add item feature

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                     </div>
                     <!-- Buttons group -->
                     <div class="add-button-group">
-                        <div class="add-button">
+                        <div class="add-button" onclick="showInputBox(0)">
                             <span class="plus-sign">+</span>
                             <span>Add Item</span>
                         </div>
-                        <div class="add-button solid">Save Item</div>
-                        <div class="add-container">
-                            <div class="add-item"></div>
-                        </div>
+                        <div class="add-button solid" onclick="saveInputBox(0)">Save Item</div>
+                    </div>
+                    <div class="add-container">
+                        <div class="add-item" contenteditable="true"></div>
                     </div>
                 </li>
 
@@ -54,14 +54,14 @@
                     </div>
                     <!-- Buttons group -->
                     <div class="add-button-group">
-                        <div class="add-button">
+                        <div class="add-button" onclick="showInputBox(1)">
                             <span class="plus-sign">+</span>
                             <span>Add Item</span>
                         </div>
-                        <div class="add-button solid">Save Item</div>
-                        <div class="add-container">
-                            <div class="add-item"></div>
-                        </div>
+                        <div class="add-button solid" onclick="saveInputBox(1)">Save Item</div>
+                    </div>
+                    <div class="add-container">
+                        <div class="add-item" contenteditable="true"></div>
                     </div>
                 </li>
 
@@ -80,14 +80,14 @@
                     </div>
                     <!-- Buttons group -->
                     <div class="add-button-group">
-                        <div class="add-button">
+                        <div class="add-button" onclick="showInputBox(2)">
                             <span class="plus-sign">+</span>
                             <span>Add Item</span>
                         </div>
-                        <div class="add-button solid">Save Item</div>
-                        <div class="add-container">
-                            <div class="add-item"></div>
-                        </div>
+                        <div class="add-button solid" onclick="saveInputBox(2)">Save Item</div>
+                    </div>
+                    <div class="add-container">
+                        <div class="add-item" contenteditable="true"></div>
                     </div>
                 </li>
 
@@ -122,14 +122,14 @@
                     </div>
                     <!-- Buttons group -->
                     <div class="add-button-group">
-                        <div class="add-button">
+                        <div class="add-button" onclick="showInputBox(3)">
                             <span class="plus-sign">+</span>
                             <span>Add Item</span>
                         </div>
-                        <div class="add-button solid">Save Item</div>
-                        <div class="add-container">
-                            <div class="add-item"></div>
-                        </div>
+                        <div class="add-button solid" onclick="saveInputBox(3)">Save Item</div>
+                    </div>
+                    <div class="add-container">
+                        <div class="add-item" contenteditable="true"></div>
                     </div>
                 </li>
             </ul>
